--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +8,7 @@
 <body>
     <div class="calc">
         <div class="calc-screen">
-            <p>0</p>
+            <p>1.1</p>
         </div>
         <div class="buttons">
             <div class="btn ac bg-grey">ac</div>
@@ -38,6 +36,6 @@
             <div class="btn equal bg-orange">=</div>
         </div>
     </div>
-    <script scr="main.js"></script>
-</body>
-</html>
+    <script src="calc.js"></script>
+
+</body></html>
